//
//  Strings.swift
//  PlasticWeight
//
//  Created by Allen Whearry on 7/28/19.
//  Copyright © 2019 Codeine Technologies LLC. All rights reserved.
//

import Foundation

struct TitleStrings {
    static let sheetbar = NSLocalizedString("Sheet / Bar", comment: "sheet / bar navigation title")
    static let sheet = NSLocalizedString("Sheet", comment: "sheet bar title")
    static let rod = NSLocalizedString("Rod", comment: "rod navigation and bar title")
    static let roundTube = NSLocalizedString("Round Tube", comment: "round tube navigation and bar title")
    static let squareTube = NSLocalizedString("Square Tube", comment: "square tube navigation and bar title")
}


struct ControlStrings {
    static let selectMaterial = NSLocalizedString("Select Material", comment: "label for material picker")
    static let calculate = NSLocalizedString("Calculate", comment: "title for calculate button")
    static let clearFields = NSLocalizedString("Clear Fields", comment: "title for clear fields button")
    static let done = NSLocalizedString("Done", comment: "done")
}

struct InputFieldStrings {
    static let thickness = NSLocalizedString("(T)hickness", comment: "(T)hickness")
    static let width = NSLocalizedString("(W)idth", comment: "(W)idth")
    static let length = NSLocalizedString("(L)ength", comment: "(L)ength")
    static let diameter = NSLocalizedString("(D)iameter", comment: "(D)iameter")
    static let outerDiameter = NSLocalizedString("(O)uter (D)iameter", comment: "(O)uter (D)iameter")
    static let outerSquareWidth = NSLocalizedString("(O)uter (S)q. Width", comment: "(O)uter (S)q. Width")
    static let wall = NSLocalizedString("(W)all", comment: "(W)all")
}
