...
        calculatorChangeNotification.removeObserver(self)
    }
    
    func setupView() {
        let settingsBtn = UIBarButtonItem(image: UIImage(named: "settings"), style: UIBarButtonItem.Style.plain, target: self, action: #selector(settingsBtnPressed))
        settingsBtn.tintColor = .white
        settingsBtn.accessibilityLabel = "Settings Button"
        navigationItem.rightBarButtonItem = settingsBtn
        
        let scrrenWidth = UIScreen.main.bounds.width
        if scrrenWidth <= 320 {
            let attributes = [NSAttributedString.Key.font: UIFont.systemFont(ofSize: 24, weight: .bold)]
            navigationController?.navigationBar.largeTitleTextAttributes = attributes
...
