...
    private func setupDimensionStackView() {
        textFieldStacks.forEach { dimensionsStackView.addArrangedSubview($0) }
    }
    
    private func setupMaterialPicker() {
        materialPicker.delegate = self
        materialPicker.accessibilityLabel = "Material Picker"
        materialTextField.inputView = materialPicker
        materialPicker.translatesAutoresizingMaskIntoConstraints = false
        materialPicker.backgroundColor = .white
    }
    
    private func setupEditingToolBar() {
...
